<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_single_checkout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_single_checkout"/>
    <item
        android:id="@+id/menu_installment"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_installment"/>
    <item
        android:id="@+id/menu_card_register"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_card_register"/>
    <item
        android:id="@+id/menu_registered_cards"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_registered_cards"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_about"/>

</menu>