<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MobileLibMenuActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/cardRegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/register"
            android:onClick="onCardRegisterButton"
            android:text="@string/cardRegister" />

        <Button
            android:id="@+id/singlePaymentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/signle_payment"
            android:onClick="onSinglePaymentButton"
            android:text="@string/singlePayment" />

        <Button
            android:id="@+id/installmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/installment"
            android:onClick="onInstallmentPayButton"
            android:text="@string/installment" />

        <Button
            android:id="@+id/registeredCardList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/cardregister"
            android:onClick="onRegisteredCardList"
            android:text="@string/registeredCardList" />

    </LinearLayout>

</RelativeLayout>